--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 body, h1, h2, h3, p, ul, li, form, label, input, textarea, button {
     margin: 0;
     padding: 0;
-}
+    }
 
 body {
     font-family: Arial, sans-serif;
@@ -16,7 +16,7 @@ body {
 }
 
 header {
-    background-color: #333;
+    background-color: #6ec2d0;
     color: #fff;
     padding: 1rem;
     text-align: center;
