--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ body {
 }
 
 header {
-    background-color: #6ec2d0;
+    background-color: #00ffff;
     color: #fff;
     padding: 1rem;
     text-align: center;
