--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ nav ul {
     list-style: none;
     display: flex;
     justify-content: center;
-    background-color: #f4f4f4;
+    background-color: #e2725b;
     padding: 1rem 0;
 }
 
