--- a/styles.css
+++ b/styles.css
@@ -1,94 +1,52 @@
 /* Reset some default styles */
-body, h1, h2, h3, p, ul, li, form, label, input, textarea, button {
+body, h1, h2, p {
     margin: 0;
     padding: 0;
-    }
+}
 
+/* Basic styling */
 body {
     font-family: Arial, sans-serif;
-}
-#profile-picture {
-    position: absolute;
-    top: 1rem; /* Adjust the top distance as needed */
-    right: 1rem; /* Adjust the right distance as needed */
-    max-width: 100px; /* Adjust the maximum width as needed */
-    border-radius: 50%; /* Make the image circular */
+    background-color: #f0f0f0;
 }
 
 header {
-    background-color: #008080;
+    background-color: #007acc;
     color: #fff;
-    padding: 1rem;
+    padding: 20px;
     text-align: center;
+    position: relative;
+}
+
+nav {
+    display: none;
 }
 
 nav ul {
-    list-style: none;
-    display: flex;
-    justify-content: center;
-    background-color: #00ffff;
-    padding: 1rem 0;
+    list-style-type: none;
 }
 
 nav ul li {
-    margin: 0 1rem;
+    display: inline;
+    margin-right: 20px;
 }
 
-nav ul li a {
+nav a {
     text-decoration: none;
-    color: #333;
+    color: #fff;
 }
 
 section {
-    padding: 2rem;
-}
-
-#personal-info {
-    margin-bottom: 2rem;
-    padding: 1rem;
-    border: 1px solid #ccc;
-    background-color: #f4f4f4;
-}
-
-#personal-info ul {
-    list-style-type: none;
-    padding: 0;
-}
-
-#personal-info li {
-    margin-bottom: 1rem;
-    line-height: 1.5;
-}
-
-#personal-info li strong {
-    font-weight: bold;
-}
-
-#highlights ul {
-    margin-left: 2rem;
-}
-
-#publications li {
-    margin-bottom: 0.5rem;
-}
-
-#contact-form {
-    display: flex;
-    flex-direction: column;
-    max-width: 400px;
-    margin: 0 auto;
-}
-
-#contact-form label,
-#contact-form input,
-#contact-form textarea,
-#contact-form button {
-    margin-bottom: 1rem;
+    padding: 40px;
+    background-color: #fff;
+    margin: 20px;
+    border-radius: 5px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
 
 footer {
-    text-align: center;
-    padding: 1rem;
-    background-color: #333;
+    background-color: #007acc;
     color: #fff;
+    text-align: center;
+    padding: 10px;
 }
