--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,7 @@
             top: 10px; /* Adjust top position as needed */
             right: 10px; /* Adjust right position as needed */
             max-width: 100px;
+            border-radius: 50%; 
         }
 
         header h1 {
