--- a/styles.css
+++ b/styles.css
@@ -17,10 +17,10 @@ header {
 
 header .logo {
     position: absolute;
-    top: 10px;
-    right: 10px;
-    max-width: 100px;
-    border-radius: 50%; 
+    top: 1rem; /* Adjust the top distance as needed */
+    right: 1rem; /* Adjust the right distance as needed */
+    max-width: 100px; /* Adjust the maximum width as needed */
+    border-radius: 50%; /* Make the image circular */
 }
 
 header h1 {
@@ -70,9 +70,10 @@ nav li {
     object-fit: cover;
     border-radius: 50%;
 }
-
 .publication-image {
     max-width: 200px;
     max-height: 200px;
     object-fit: cover;
+    display: block;
+    margin: 0 auto; /* Center-align the publication images */
 }
